property details and cors repair